Done: set default principle_color_id to nil if didn't got params

--- a/app/views/shared/_match_result.html.erb
+++ b/app/views/shared/_match_result.html.erb
@@ -1,4 +1,4 @@
-<!-- tab比照 khroma配一下 的功能，多送一個params[:principle_color_id] = principle_color_id 進controller -->
+<!-- tab比照 'khroma配一下' 的功能，多送一個params[:principle_color_id] = principle_color_id 進controller -->
 <%# principle_colors.each_with_index do |principle_color, i| %>
   <div><%#= "principle_color_id: #{principle_color.id} - #{principle_color.principle.name}: #{principle_color.hue_level.name} x #{principle_color.match1_hue_level.name}" %></div>  
 <%# end %>
