--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1,6 +1,8 @@
 @import "font-awesome";
 @import 'bootstrap';
 
+@import 'slick';
+@import 'slick-theme';
 @import "common";
 @import "products";
 @import "khroma";
