--- a/app/assets/stylesheets/khroma.css
+++ b/app/assets/stylesheets/khroma.css
@@ -183,18 +183,29 @@
 
 /* result */
 
+#match-result {
+  background: #FFF;
+  padding: 20px 0;
+}
+
 .match-principle-pills {
   width: 100%;
   display: grid;
   grid-gap: 20px;
-  grid-template-columns: repeat(auto-fill, minmax(40px, 100px));
+  grid-template-columns: repeat(auto-fit, minmax(40px, 1fr));
+  padding: 30px 0;
 }
 .match-principle-pill {
-  height: 40px;
+  height: 30px;
   display: flex;
-  
   cursor: pointer;
   background: #000;
+  opacity: 0.5;
+}
+
+.match-principle-pill.active {
+  opacity: 1;
+  box-shadow: 0 2px 5px 0 rgba(0, 0, 0, .16), 0 2px 10px rgba(0, 0, 0, .12);
 }
 
 .match-principle-pill .hex-lbl {
@@ -206,7 +217,7 @@
 
 .slash {
   border-style: solid;
-  border-width: 20px 10px 20px 10px;
+  border-width: 15px 10px 15px 10px;
   opacity: 0.9;
 }
 
@@ -241,20 +252,52 @@
 
 .match-result-item {
   display: grid;
+  grid-gap: 50px;
   grid-template-columns: 1fr 1fr;
 }
 
-
-
-/*.match-result-item .carousel {
-  padding: 20px;
-  perspective: 500px;
-  overflow: hidden;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
+.left-match-col {
+  max-width: 600px;
 }
 
+.right-match-col {
+  max-width: 600px;
+}
+
+.up-products-panel {
+  margin-top: 30px;
+}
+
+.carousel {
+  max-width: 500px;
+  max-height: 350px;
+}
+
+.carousel img {
+  max-width: 350px;
+  max-height: 350px;
+}
+
+.slick-list {
+  width: 500px;
+  text-align: center;
+}
+
+.slick-slide {
+  padding: 0 20px;
+}
+
+.slick-prev:before, .slick-next:before {
+  font-size: 30px;
+  color: black;
+  left: -10px;
+  position: absolute;
+}
+
+.carousel .product-img {
+
+}
+/*
 .match-result-item .carousel > * {
   flex: 0 0 auto;
 }
