--- a/app/views/shared/_match_result.html.erb
+++ b/app/views/shared/_match_result.html.erb
@@ -1,45 +1,38 @@
 <!-- tab比照 'khroma配一下' 的功能，多送一個params[:principle_color_id] = principle_color_id 進controller -->
 <div class="match-principle-pills">
   <% principle_colors.each_with_index do |principle_color, i| %>
-    
       <div id="<%= principle_color.id %>" class="match-principle-pill shadow-box-light">
         <div class="hex-lbl" style="background: <%= principle_color.hue_level.hex %>;"></div>
         <div class="slash" style="border-color:  <%= principle_color.hue_level.hex %> <%= principle_color.match1_hue_level.hex %>  <%= principle_color.match1_hue_level.hex %> <%= principle_color.hue_level.hex %>;"></div>
         <div class="hex-lbl" style="background: <%= principle_color.match1_hue_level.hex %>;"></div>
       </div>
-
   <% end %>
 </div>
 
   <div class="match-principle-lbl">
-    <div>配色法則: <%= target_principle.name %>
+    <div>
       <div class="match-principle-panel shadow-box">
+        配色法則: <%= target_principle.name %>
         <%= image_tag target_principle.image unless image_path(target_principle.image) == '' %>
       </div>
     </div> 
   </div>
 
 <div class="match-result-item">
-  <div>
+  <div class="left-match-col">
     <div class="up-products-panel carousel">
-      <figure>
         <% top_products.each do |product| %>
           <%= render partial: "shared/product_match", locals: {product: product} %>
         <% end %>
-      </figure>
-      <nav id="carousel-nav">
-        <button class="nav prev btn btn-outline-secondary btn-sm" onclick="gallerySpin('-')">Prev</button>
-        <button class="nav next btn btn-outline-secondary btn-sm" onclick="gallerySpin('')">Next</button>
-      </nav>
     </div> 
     <div class="down-products-panel carousel" style="margin-top: 20px;">
       <% bottom_products.each do |product| %>
           <%= render partial: "shared/product_match", locals: {product: product} %>
       <% end %>
     </div>  
-    <%= show_optional_colors(optional_colors) %>  <!-- helper: app/helpers/khroma_helper -->
+<!--     <%= show_optional_colors(optional_colors) %>  --> <!-- helper: app/helpers/khroma_helper -->
   </div>
-    <div>
+    <div class="right-match-col">
     <% unless outfits == [] %>
         <%= image_tag(outfits.first.image) %>
     <% end %>
