--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -6,9 +6,12 @@
     <div id="product-match">
       <%= render partial: "shared/match_btn" %>
     </div>
-    <div id="product-match-result">
-      <div id="match-result-panel">
-      </div>
-    </div>
-  </div> 
+  </div>
+
 </div>
+<div id="product-match-result">
+  <div class="container">
+      <div id="match-result-panel">
+    </div>
+  </div>
+</div> 
