fixed go back loading animation won't hide

--- a/app/assets/stylesheets/common.css
+++ b/app/assets/stylesheets/common.css
@@ -89,7 +89,10 @@ button[disabled] {
   cursor: pointer;
 }
 
-
+/*[data-sr] {
+  visibility: hidden;
+}
+*/
 /* navbar */
 header {
   width: 100%;
