--- a/app/assets/stylesheets/common.css
+++ b/app/assets/stylesheets/common.css
@@ -117,7 +117,7 @@ header {
 }
 
 #logo {
-  width: 120px;
+  width: 100%;
   height: 35px;
   display: grid;
   grid-template-areas: "logo";
@@ -449,10 +449,8 @@ footer {
 /* RWD */
 
 
-@media (min-width: 550px) {
-  .container {
-    max-width: 90%;
-  }
+@media (max-width: 768px) {
+  
 }
 
 @media (max-width: 550px) {
@@ -460,8 +458,20 @@ footer {
     width: 100%;
   }
 
+  #nav, #menu, #menu-user a {
+    font-size: 14px;
+  }
+
+  #nav .container {
+    padding: 0px;
+  }
+
+  #logo a, #sign-menu a {
+    font-size: 16px;
+  }
+
   #upper-nav {
-    grid-template-columns: 100px 1fr 100px;
+    grid-template-columns: 90px 1fr 120px;
   }
 }
 
