--- a/app/assets/stylesheets/khroma.css
+++ b/app/assets/stylesheets/khroma.css
@@ -278,7 +278,7 @@
 }
 
 .slick-list {
-  max-width: 500px;
+/*  max-width: 500px;*/
   text-align: center;
   vertical-align: middle;
 }
@@ -322,9 +322,19 @@
   .promote-item .promote-icon {
     display: none;
   }
+
+  .carousel {
+    max-width: 400px;
+    max-height: 350px;
+  }
+
+  .carousel img {
+    max-width: 330px;
+    max-height: 300px;
+  }
 }
 
-@media (max-width: 768px) {
+@media (max-width: 790px) {
 
   .match-choice-panel {
     width: 100%;
@@ -348,7 +358,7 @@
 
 }
 
-@media (max-width: 550px) {
+@media (max-width: 590px) {
   .match-choice-panel  {
     grid-gap: 10px;
   }
@@ -357,13 +367,6 @@
   }
   #q1-choice-panel {
     grid-template-columns: 1fr;
-  }
-
-  .slick-slide {
-    width: 50%;
-  }
-  .slick-slide img {
-    display: inline-block;
   }
 
   #q2-choice-panel {
@@ -377,5 +380,19 @@
 
   .match-btn-word {
     font-size: 16px;
+  }
+  
+    .carousel {
+    max-width: 320px;
+    max-height: 350px;
+  }
+
+  .carousel img {
+    max-width: 280px;
+    max-height: 350px;
+  }
+  
+  .slick-slide img {
+    display: inline-block;
   }
 }
