--- a/app/assets/stylesheets/products.css
+++ b/app/assets/stylesheets/products.css
@@ -178,6 +178,10 @@
 .product-info-lg .product-cart-link-row {
   padding: 20px 0 10px 0;
 }
+
+.family-btn {
+  justify-self:start;
+}
 /* product family */
 
 #product-family-panel img {
@@ -186,12 +190,12 @@
 }
 
 #product-family-panel {
-  margin: 20px 0 40px 0;
+  margin: 20px 0 60px 0;
   display: none;
 }
 
 .slick-dots {
-  bottom: -20px;
+  bottom: -40px;
 }
 
 /* product match btn */
