reset password front-end & delete useless file

--- a/app/views/devise/passwords/new.html.erb
+++ b/app/views/devise/passwords/new.html.erb
@@ -2,7 +2,7 @@
   <div class="sign-panel">
     <div class="card">
       <div class="card-header">
-        <h6>密碼重設</h6>
+        <h6>忘記密碼</h6>
         <div class="close-btn pull-right">&#10005;</div>
       </div>
       <div class="card-body">
@@ -20,17 +20,14 @@
             <%= f.email_field :email, autofocus: true, autocomplete: "email", placeholder: "郵箱",class: "form-control" %>
           </div>
           <br>
-          
-
           <div class="actions">
             <%= f.submit "寄送重設密碼郵件", class: "btn btn-primary sign-btn" %>
           </div>
-    
         <% end %>
-
       </div>
     </div>
   </div>
 </div>
+
 
 
