--- a/app/views/devise/passwords/edit.html.erb
+++ b/app/views/devise/passwords/edit.html.erb
@@ -1,25 +1,36 @@
-<h2>Change your password</h2>
+<div class="sign-overlay">
+  <div class="sign-panel">
+    <div class="card">
+      <div class="card-header">
+        <h6>密碼重設</h6>
+        <div class="close-btn pull-right">&#10005;</div>
+      </div>
+      <div class="card-body">
+        <%= render "devise/shared/links" %>
+        <p>或</p>
+        <% if flash[:alert] %>
+          <span style="color: red" ><%= flash[:alert] %></span>
+        <% end %> 
 
-<%= form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :put }) do |f| %>
-  <%= devise_error_messages! %>
-  <%= f.hidden_field :reset_password_token %>
-
-  <div class="field">
-    <%= f.label :password, "New password" %><br />
-    <% if @minimum_password_length %>
-      <em>(<%= @minimum_password_length %> characters minimum)</em><br />
-    <% end %>
-    <%= f.password_field :password, autofocus: true, autocomplete: "off" %>
+        <%= form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :put }) do |f| %>
+          <%= devise_error_messages! %>
+          <%= f.hidden_field :reset_password_token %>
+          <div class="field">
+            <% if @minimum_password_length %>
+              <em>(<%= @minimum_password_length %> characters minimum)</em><br />
+            <% end %>
+            <%= f.password_field :password, autofocus: true, autocomplete: "off", placeholder: "新密碼",class: "form-control" %>
+          </div>
+          <br>
+          <div class="field">
+            <%= f.password_field :password_confirmation, autocomplete: "off", placeholder: "確認新密碼",class: "form-control" %>
+          </div>
+          <br>
+          <div class="actions">
+            <%= f.submit "更改密碼", class: "btn btn-primary sign-btn" %>
+          </div>
+        <% end %>
+      </div>
+    </div>
   </div>
-
-  <div class="field">
-    <%= f.label :password_confirmation, "Confirm new password" %><br />
-    <%= f.password_field :password_confirmation, autocomplete: "off" %>
-  </div>
-
-  <div class="actions">
-    <%= f.submit "Change my password" %>
-  </div>
-<% end %>
-
-<%= render "devise/shared/links" %>
+</div>
