--- a/app/views/admin/categories/edit.html.erb
+++ b/app/views/admin/categories/edit.html.erb
@@ -25,11 +25,15 @@
 
   <h2>編輯區</h2>
   <%= form_for [:admin,@category] do |f| %>
-    <%= f.label :name, "Name" %>
-    <%= f.text_field :name %>
-    <%= f.label :gender_id, "Gender_id" %>
-    <%= f.text_field :gender_id %>
-    <%= f.submit %>
+    <div class = "row">
+      <div class = "col-xs-4">
+        <%= f.label :name, "Name" %>
+        <%= f.text_field :name, class: "form-control" %>
+        <br>
+        <%= f.collection_select :gender_id, @genders, :id , :name, option = {prompt: true}, {class: "form-control"} %>
+        <br>
+        <%= f.submit "確認", class: "btn btn-primary" %>
+      </div>
+    </div>
   <% end %>
-
 </div>
