--- a/app/views/admin/categories/index.html.erb
+++ b/app/views/admin/categories/index.html.erb
@@ -38,27 +38,12 @@
           <%= f.label :name, "Name" %>
           <%= f.text_field :name, class: "form-control" %>
         </div>
-        <div class = "form-group">
-          <%= f.label :gender_id, "type_id" %>
-          <%= f.text_field :gender_id, class: "form-control" %>
-        </div>
-        <%= f.submit %>
+          <%= f.collection_select :gender_id, @genders, :id , :name, option = {prompt: true}, {class: "form-control"} %>
+          <br>
+        <%= f.submit "確認", class: "btn btn-primary" %>
       <% end %>
     </div>
-    <div class = "col-6">
-      <h3>可用的gender id</h3>
-      <br>
-      <div class = "row">
-      <% @genders.each do |gender| %>
-        <div class = "col-3">
-          <span class="badge badge-pill badge-success my-badge">
-            <%= gender.name %>
-            <%= gender.id %>
-          </span>
-        </div>
-      <% end %>
-      </div>
-    </div>
+
   </div>
   <br>
 
