--- a/app/views/admin/genders/index.html.erb
+++ b/app/views/admin/genders/index.html.erb
@@ -1,6 +1,5 @@
-<div class = "container">
-
-  <%= render partial: "shared/admin_nav" %>
+  <div class = "container">
+    <%= render partial: "shared/admin_nav" %>
 
     <table class="table table-hover table-dark">
       <thead>
@@ -25,13 +24,13 @@
       </tbody>
     </table>
 
-
-  <%= form_for [:admin,@gender] do |f| %>
-    <%= f.label :name, "Name" %>
-    <%= f.text_field :name %>
-    <%= f.submit %>
-  <% end %>
-
-
-
-</div>
+    <h3>編輯區</h3>
+    <br>
+    <%= form_for [:admin,@gender] do |f| %>
+      <div class = "form-group">
+        <%= f.label :name, "Name" %>
+        <%= f.text_field :name %>
+      </div>
+      <%= f.submit"確認", class: "btn btn-primary btn-sm" %>
+    <% end %>
+  </div>
