--- a/app/views/admin/products/index.html.erb
+++ b/app/views/admin/products/index.html.erb
@@ -8,10 +8,12 @@
           <% @products.first.attributes.each do |key,value|  %>
             <th scope="col"><%= key %></th>
           <% end %>
+          <th scope="col">顏色hex</th>
+          <th scope="col">hue level</th>
           <th scope="col">edit</th> 
           <th scope="col">delete</th>
           <% else %>
-            <h1>佔無products</h1>
+            <h1>暫無products</h1>
         <% end %>
       </tr>
     </thead>
@@ -19,8 +21,10 @@
       <% @products.each do |product| %>
         <tr>
           <% product.attributes.each do |key,value|  %>
-            <td class = "td-width"><%= value %></td>
+            <td class = "td-width"><%= show_product_attribute(value) %></td>
           <% end %>
+          <td><%= product.color.hex %> <div class="chip-color" style="background-color: <%= product.color.hex %>;"></div> </td>
+          <td><%= product.color.hue_level.name %></td>
           <td><%= link_to "編輯", edit_admin_style_product_path(@style, product) %></td>
           <td><%= link_to "刪除", admin_style_product_path(@style, product), method: :delete %></td>
         </tr>
