--- a/app/views/admin/categories/edit.html.erb
+++ b/app/views/admin/categories/edit.html.erb
@@ -12,28 +12,27 @@
         </tr>
       </thead>
       <tbody>
-       
-          <tr>
-            <% @category.attributes.each do |key,value|  %>
-              <td><%= value %></td>
-            <% end %>
-
-          </tr>
-     
+        <tr>
+        <% @category.attributes.each do |key,value|  %>
+          <td><%= value %></td>
+        <% end %>
+        </tr>   
       </tbody>
     </table>
-
-  <h2>編輯區</h2>
-  <%= form_for [:admin,@category] do |f| %>
-    <div class = "row">
-      <div class = "col-xs-4">
-        <%= f.label :name, "Name" %>
-        <%= f.text_field :name, class: "form-control" %>
-        <br>
-        <%= f.collection_select :gender_id, @genders, :id , :name, option = {prompt: true}, {class: "form-control"} %>
-        <br>
+  <hr>
+  <h3>編輯區</h3>
+  <br>
+  <div class = "row">
+    <div class = "col-4">
+      <%= form_for [:admin,@category] do |f| %>
+        <div class = "form-group">
+          <%= f.label :name, "Name" %>
+          <%= f.text_field :name, class: "form-control" %>
+        </div>
+          <%= f.collection_select :gender_id, @genders, :id , :id_with_name, option = {prompt: "選個性別吧"}, {class: "form-control"} %>
+          <br>
         <%= f.submit "確認", class: "btn btn-primary" %>
-      </div>
+      <% end %>
     </div>
-  <% end %>
+  </div>
 </div>
