--- a/app/views/admin/categories/index.html.erb
+++ b/app/views/admin/categories/index.html.erb
@@ -28,23 +28,22 @@
         <% end %>
       </tbody>
     </table>
-
-  <div class = "row">
-    
-    <div class = "col-4">
-      <h3>創造新category</h3>
-      <%= form_for [:admin,@category] do |f| %>
-        <div class = "form-group">
-          <%= f.label :name, "Name" %>
-          <%= f.text_field :name, class: "form-control" %>
-        </div>
-          <%= f.collection_select :gender_id, @genders, :id , :name, option = {prompt: true}, {class: "form-control"} %>
-          <br>
-        <%= f.submit "確認", class: "btn btn-primary" %>
-      <% end %>
+    <hr>
+    <div class = "row">
+      <div class = "col-4">
+        <h3>創造新category</h3>
+        <br>
+        <%= form_for [:admin,@category] do |f| %>
+          <div class = "form-group">
+            <%= f.label :name, "Name" %>
+            <%= f.text_field :name, class: "form-control" %>
+          </div>
+            <%= f.collection_select :gender_id, @genders, :id , :id_with_name, option = {prompt: "選個性別吧"}, {class: "form-control"} %>
+            <br>
+          <%= f.submit "確認", class: "btn btn-primary" %>
+        <% end %>
+      </div>
     </div>
-
-  </div>
   <br>
 
 </div>
