Done: admin can edit product and product's color information.

--- a/app/views/admin/products/edit.html.erb
+++ b/app/views/admin/products/edit.html.erb
@@ -41,10 +41,6 @@
         <%= f.label :price, "Price" %>
         <%= f.text_field :price %>
       </div>
-      <%#= f.fields_for :color do |c| %>
-        <%#= c.text_field :hue_level_id %>
-        <%#= c.text_field :hex %>
-      <%# end %>
     </div>
     <div class="form-group">
       <%= f.label :image, "Image" %>
@@ -55,11 +51,13 @@
       <%= f.text_field :link, class: "form-control" %>
     </div>
     <div class="form-group">
-      <%= f.label :color_chip, "Color chip" %>
+      <%= f.label :color_chip, "Color chip" %> <div class="btn admin-btn btn-default" id="get-color">取得顏色</div>
       <%= f.text_field :color_chip, class: "form-control" %>
     </div>
     <br>
-    <%= render partial: "shared/color_info" %>
+    <div id="color-info-panel">
+      <%= render partial: "shared/color_info", locals: {chip_url: @chip_url, chip_colors: @chip_colors, target_index: @target_index, hue_levels: @hue_levels} %>
+    </div>
     <%= f.submit %>
   <% end %>
 
