--- a/app/views/admin/products/index.html.erb
+++ b/app/views/admin/products/index.html.erb
@@ -57,7 +57,23 @@
       <%= f.label :link, "Link" %>
       <%= f.text_field :link, class: "form-control" %>
     </div>
+    <div class="form-group">
+      <%= f.label :color_chip, "Color chip" %> <div class="btn admin-btn btn-default" id="get-color">取得顏色</div>
+      <%= f.text_field :color_chip, class: "form-control" %>
+    </div>
+    <div id="color-info-panel">
+    </div>  
+    <div id="error-box">
+      <% if @product.errors.any? %>
+        <h4>We have some errors here!</h4>
+        <ul>
+          <% @product.errors.full_messages.each do |msg| %>
+          <li><%= msg %></li>
+          <% end %>
+        </ul>
+      <% end %>
+    </div>
     <br>
-    <%= f.submit %>
+    <%= f.submit "Create product!", id: 'submit-btn', disabled: true %>
   <% end %>
 </div>
