--- a/app/assets/stylesheets/khroma.css
+++ b/app/assets/stylesheets/khroma.css
@@ -137,7 +137,6 @@
   display: inline-block;
 }
 
-
 #question2 {
   display: none;
 } 
@@ -341,14 +340,14 @@
   transform: translateY(144px);
 }
 
-.up-products-panel {
-  margin-top: 10px;
-  align-self:center;
-  justify-self:center;
-}
+.up-products-panel,
 .down-products-panel {
   align-self:center;
   justify-self:center;
+}
+
+.up-products-panel {
+  margin-top: 10px;
 }
 
 .carousel {
@@ -381,7 +380,6 @@
   left: -25px;
 }
 
-
 .slick-slide img {
   display: none;
 }
@@ -390,11 +388,9 @@
   display: inline-block;
 }
 
-
 /*  RWD */
 
 @media (max-width: 960px) {
-
   .promote-item {
     grid-template-columns: 1fr;
     text-align: center;
@@ -440,7 +436,6 @@
     "right"
     "left"  
   }
-
 }
 
 @media (max-width: 590px) {
